[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WrapCapYouTube"
version = "0.1.0"
description = "A reusable Python library"
authors = [{ name = "David", email = "dave@chatrecall.com" }]
dependencies = [
    "pytubefix>=8.12.1",
    "youtube-transcript-api>=0.6.3"
]

[tool.setuptools]
packages = ["WrapCapYouTube"]
package-dir = {"" = "src"}
include-package-data = true
